--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@ tags: contact
   {% if site.ajaxify_contact_form %}
     <form class="form-stacked">
       <label>
-        Email
+        Email noch nicht aktiviert
         <input type="text" name="email" class="field-light" placeholder="{{ site.text.contact.email }}">
       </label>
 
@@ -20,7 +20,8 @@ tags: contact
 
       <input type="text" name="_gotcha" style="display:none" />
 
-      <button type='submit' class="button button-blue button-big mobile-block">{{ site.text.contact.submit }}</button>
+   <!--   <button type='submit' class="button button-blue button-big mobile-block">{{ site.text.contact.submit }}</button>
+   -->
     </form>
   {% else %}
     <form action="https://formspree.io/{{ site.email }}" method="POST" class="form-stacked">
@@ -32,12 +33,12 @@ tags: contact
         Content
         <textarea type="text" name="content" class="field-light" rows="5" placeholder="{{ site.text.contact.content }}" style="resize: vertical"></textarea>
       </label>
-
+<!--<input
       <input type="hidden" name="_next" value="{{ site.baseurl }}/thanks/" />
       <input type="hidden" name="_subject" value="{{ site.text.contact.subject }}" />
       <input type="text" name="_gotcha" style="display:none" />
 
-      <input type="submit" class="button button-blue button-big mobile-block" value="{{ site.text.contact.submit }}">
+       type="submit" class="button button-blue button-big mobile-block" value="{{ site.text.contact.submit }}"> -->
     </form>
   {% endif %}
 </div>
