WOLUST Homepage beta 0.1

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@ layout: default
 {% assign posts_count = paginator.posts | size %}
 
 <div class="home">
-<img src="/images/tux-wolust.jpg" />
+<strong>WOLUST</strong> ist ein Acronym für <strong>Wo</strong>rmser <strong>L</strong>inux <strong>U</strong>ser <strong>S</strong>tamm<strong>t</strong>isch . 
+<img src="/images/tux-wolust.jpg" alt="Tux auf einem Biertisch" title="Der Tux ist immer dabei"/>
   {% if posts_count > 0 %}
     <div class="posts">
       {% for post in paginator.posts %}
