Wolust Homepage alpha 30.0

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 {% assign posts_count = paginator.posts | size %}
 
 <div class="home">
-<strong>WOLUST</strong> ist ein Acronym für <strong>Wo</strong>rmser <strong>L</strong>inux <strong>U</strong>ser <strong>S</strong>tamm<strong>t</strong>isch . 
+<div style="margin-bottom: 25px;"><strong>WOLUST</strong> ist ein Acronym für <strong>Wo</strong>rmser <strong>L</strong>inux <strong>U</strong>ser <strong>S</strong>tamm<strong>t</strong>isch. Wir teffen uns monatlich. Die Themen sind meist frei wählbar. Es geht um aktuelle Erfahrungen, beruflich oder aus Freizeit und Hobby.</div>
 <div style="float: right;"><img src="/images/tux-wolust.jpg" alt="Tux auf einem Biertisch" title="Der Tux ist immer dabei"/></div>
 
 {% if posts_count > 0 %}
