googledoogle Klammer vergessen

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Wenn Dich Linux interessiert, komm vorbei, setz Dich dazu !
       "addressCountry": "De"
     }
   },
-  "image": "https://wolust.de/images/tux-wolust.jpg"
+  "image": ["https://wolust.de/images/tux-wolust.jpg"
    ],
   "description": "Wormser Linux User treffen sich einmal im Monat. Wenn du Interesse an Linux hast, komm vorbei und setz dich dazu !",
   "endDate": "{{treffen.jahr}}-{{treffen.monat}}-{{ treffen.tag }}T23:00",
