--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ layout: default
 {% assign posts_count = paginator.posts | size %}
 
 <div class="home">
-<div style="margin-bottom: 25px;"><strong>WOLUST</strong> ist ein Acronym für <strong>Wo</strong>rmser <strong>L</strong>inux <strong>U</strong>ser <strong>S</strong>tamm<strong>t</strong>isch. Die Themen sind meist frei wählbar. Es geht um aktuelle Erfahrungen, beruflich, schulisch oder aus Hobby.<br />
-Wenn Dich Linux interessiert, komm vorbei, setz Dich dazu !
+<div style="margin-bottom: 25px;"><strong>WOLUST</strong> ist ein Acronym für <strong>Wo</strong>rmser <strong>L</strong>inux <strong>U</strong>ser <strong>S</strong>tamm<strong>t</strong>isch. Die Themen sind meist frei wählbar. Es geht um aktuelle Erfahrungen, beruflich, schulisch oder aus Hobby. <a href="/linux_worms">tl;dr</a><br />
+Wenn Dich Linux interessiert, komm vorbei, setz Dich dazu ! 
 </div>
 <div style="float: right;"><img src="/images/tux-wolust.jpg" alt="Tux auf einem Biertisch" title="Der Tux ist immer dabei"/></div>
 
