--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@ layout: default
 {% assign posts_count = paginator.posts | size %}
 
 <div class="home">
-<div style="margin-bottom: 25px;"><strong>WOLUST</strong> ist ein Acronym für <strong>Wo</strong>rmser <strong>L</strong>inux <strong>U</strong>ser <strong>S</strong>tamm<strong>t</strong>isch. Die Themen sind meist frei wählbar. Es geht um aktuelle Erfahrungen, beruflich, schulisch oder aus Hobby. <a href="/linux_worms">tl;dr</a><br />
+<div style="margin-bottom: 25px;">
+<figure style="float:right; margin-left: 40px;"><img src="/images/tux-wolust.jpg" alt="Tux auf einem Biertisch" title="Der Tux ist immer dabei"/>
+<figcaption style="margin-left: 20px; margin-right: 20px;">Tux ist auf dem Tisch</figcaption>
+</figure>
+
+<strong>WOLUST</strong> ist ein Acronym für <strong>Wo</strong>rmser <strong>L</strong>inux <strong>U</strong>ser <strong>S</strong>tamm<strong>t</strong>isch. Die Themen sind meist frei wählbar. Es geht um aktuelle Erfahrungen, beruflich, schulisch oder aus Hobby. <a href="/linux_worms">tl;dr</a><br />
 Wenn Dich Linux interessiert, komm vorbei, setz Dich dazu ! 
 </div>
-<div style="float: right;"><img src="/images/tux-wolust.jpg" alt="Tux auf einem Biertisch" title="Der Tux ist immer dabei"/></div>
+
 
 {% if posts_count > 0 %}
     <div class="posts">
