--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@ layout: default
 </figure>
 <strong>WOLUST</strong> ist ein Acronym für <strong>Wo</strong>rmser <strong>L</strong>inux <strong>U</strong>ser <strong>S</strong>tamm<strong>t</strong>isch. Die Themen sind meist frei wählbar. Es geht um aktuelle Erfahrungen, beruflich, schulisch oder aus Hobby. <a href="/linux_worms">tl;dr</a><br />
 Wenn Dich Linux interessiert, komm vorbei, setz Dich dazu ! 
+<br/>
+    <strong>ACHTUNG TERMINÄNDERUNG !</strong>    
 </div>
 {% if posts_count > 0 %}
     <div class="posts">
