--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 {% assign posts_count = paginator.posts | size %}
 <div class="home">
   <div class="well">
-  <strong>WOLUST</strong> ist ein Acronym für <strong>Wo</strong>rmser <strong>L</strong>inux <strong>U</strong>ser <strong>S</strong>tamm<strong>t</strong>isch. Die Themen sind meist frei wählbar. Es geht um aktuelle Erfahrungen, beruflich, schulisch oder aus Hobby. <a href="/linux_worms">tl;dr</a><br />
+  <strong>WOLUST</strong> ist ein Acronym für <strong>Wo</strong>rmser <strong>L</strong>inux <strong>U</strong>ser <strong>S</strong>tamm<strong>t</strong>isch. Die Themen sind meist frei wählbar. Es geht um aktuelle Erfahrungen, beruflich, schulisch oder aus Hobby. Wie alles begann: <a href="/linux_worms">tl;dr</a><br />
 Wenn Dich Linux interessiert, komm vorbei, setz Dich dazu ! 
   </div>
   <figure id="home_tux">
@@ -24,7 +24,9 @@ Wenn Dich Linux interessiert, komm vorbei, setz Dich dazu !
                 <p>{{ post.summary }}</p>
                 <a href="{{ post.url | prepend: site.baseurl }}">lesen</a>
               {% else %}
-                {{ post.excerpt }}
+                {% assign next = site.data.daten.linuxuser[0] %}
+                <p> {{next.tag}}.{{next.monat}}.{{next.jahr}} 19:30 im {{next.ort}} </p>
+                <a href="{{ post.url | prepend: site.baseurl }}">lesen</a>
               {% endif %}
             </span>
         </div>
