--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@ layout: default
 {% assign posts_count = paginator.posts | size %}
 <div class="home">
   <div class="well">
-  <strong>WOLUST</strong> ist ein Acronym für <strong>Wo</strong>rmser <strong>L</strong>inux <strong>U</strong>ser <strong>S</strong>tamm<strong>t</strong>isch. Die Themen sind meist frei wählbar. Es geht um aktuelle Erfahrungen, beruflich, schulisch oder aus Hobby. Wie alles begann: <a href="/linux_worms">tl;dr</a><br />
+  <strong>WOLUST</strong> ist ein Acronym für <strong>Wo</strong>rmser <strong>L</strong>inux <strong>U</strong>ser <strong>S</strong>tamm<strong>t</strong>isch. Die Themen sind meist frei wählbar. Es geht um aktuelle Erfahrungen, beruflich, schulisch oder aus Hobby. Wie alles begann: <a href="/linux_worms">tl;dr</a>
 Wenn Dich Linux interessiert, komm vorbei, setz Dich dazu ! 
-<br /><strong class="red">Heute  20.08.2019 gibts einen außerordentlicher Stammtisch </strong> Thema: VHS-Worms
   </div>
   <figure id="home_tux">
       <img src="/images/tux-wolust.jpg" alt="Tux auf einem Biertisch" title="Der Tux ist immer dabei"/>
