--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@ Wenn Dich Linux interessiert, komm vorbei, setz Dich dazu !
               {% else %}
                 {% assign next = site.data.daten.linuxuser[0] %}
                 <p> {{next.tag}}.{{next.monat}}.{{next.jahr}} 19:30 im {{next.ort}} </p>
-                <p> Dieses Treffen ist speziell für Neulinge, die wissen wollen was Linux ist. Wir haben bootbare USB-Sticks und DVDs mit Linux dabei.
-                <a href="{{ post.url | prepend: site.baseurl }}">lesen</a></p>
+                <p><a href="{{ post.url | prepend: site.baseurl }}">lesen</a></p>
               {% endif %}
             </span>
         </div>
