--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@ layout: default
 <div class="home">
   <div class="well">
   <strong>WOLUST</strong> ist ein Acronym für <strong>Wo</strong>rmser <strong>L</strong>inux <strong>U</strong>ser <strong>S</strong>tamm<strong>t</strong>isch. Die Themen sind meist frei wählbar. Es geht um aktuelle Erfahrungen, beruflich, schulisch oder aus Hobby. Wie alles begann: <a href="/linux_worms">tl;dr</a>
-Wenn Dich Linux interessiert, komm vorbei, setz Dich dazu !  
+<br />
+    <strong>Achtung am Mittwoch dem 30 12.2020 gibts einen außerordentlichen Stammtisch!</strong>
+<br />
+    Wenn Dich Linux interessiert, komm vorbei, setz Dich dazu !  
   </div>
   <figure id="home_tux">
       <img src="/images/tux-wolust.jpg" alt="Tux auf einem Biertisch" title="Der Tux ist immer dabei"/>
