--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@ tags:
 - contact
 ---
 
-<h3>Das hier ist Gästebuch, Notitzblock, Linkliste und vieles mehr.</h3>
+<h3>Das hier ist Gästebuch, Notizblock, Linkliste und vieles mehr.</h3>
 
 
 Schreib einfach Deine Kommentare da rein !
