--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@ layout: default
 <div class="home">
   <div class="well">
   <strong>WOLUST</strong> ist ein Acronym für <strong>Wo</strong>rmser <strong>L</strong>inux <strong>U</strong>ser <strong>S</strong>tamm<strong>t</strong>isch. Die Themen sind meist frei wählbar. Es geht um aktuelle Erfahrungen, beruflich, schulisch oder aus Hobby. Wie alles begann: <a href="/linux_worms">tl;dr</a>.
-   <br /> Wenn Dich Linux interessiert, komm vorbei, setz Dich dazu !  
-  </div>
+   <br /> Wenn Dich Linux interessiert, komm vorbei, setz Dich dazu ! <br />
+
+<img style="float: left;padding-right: 10px;"  src="/images/Linux_presentation_day.png" alt="Icon Linux Presentation day" title="Wir sind auf dem Wormser LPD 2022.2"/ />
+<div style="clear: right">
+<strong>Linux Presentation Day an der Hochschule Worms. 18.11.2022</strong><br />
+15:00-18:00 Uhr. Wir sind dabei. <a title="Externer Link!" href="https://gitlab.rlp.net/fsl/l-p-d/-/blob/1e2025dc234be89029fb4119b4ba5c5fb20b032a/README.md">lesen</a>
+</div>
+   </div>
+
+
   <figure id="home_tux">
       <img src="/images/tux-wolust.jpg" alt="Tux auf einem Biertisch" title="Der Tux ist immer dabei"/>
       <figcaption style="text-align: center;">Tux ist auf dem Tisch</figcaption>
