Link zum Presentationday geändert.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
 <img style="float: left;padding-right: 10px;"  src="/images/Linux_presentation_day.png" alt="Icon Linux Presentation day" title="Wir sind auf dem Wormser LPD 2022.2"/ />
 <div style="clear: right">
 <strong>Linux Presentation Day an der Hochschule Worms. 18.11.2022</strong><br />
-15:00-18:00 Uhr. Wir sind dabei. <a title="Externer Link!" href="https://gitlab.rlp.net/fsl/l-p-d/-/blob/1e2025dc234be89029fb4119b4ba5c5fb20b032a/README.md">lesen</a>
+15:00-18:00 Uhr. Wir sind dabei. <a title="Externer Link!" href="https://www.hs-worms.de/lpd-2022-2/">lesen</a>
 </div>
    </div>
 
