Link zur Hochschule Worms funktioniert weder

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
 
 <img style="float: left;padding-right: 10px;"  src="/images/Linux_presentation_day.png" alt="Icon Linux Presentation day" title="Wir sind auf dem Wormser LPD 2022.2"/ />
 <div style="clear: right">
-<strong>Linux Presentation Day an der Hochschule Worms. 18.11.2022</strong><br /> Wir waren dabei. <a title="Externer Link!" href="http://untergang.de:3000/dewomser/l-p-d">lesen</a>
+<strong>Linux Presentation Day an der Hochschule Worms. 18.11.2022</strong><br /> Wir waren dabei. <a title="Externer Link!" href="https://www.hs-worms.de/lpd-2022-2/">lesen</a>
 </div>
    </div>
 
