--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@ layout: default
   <strong>WOLUST</strong> ist ein Acronym für <strong>Wo</strong>rmser <strong>L</strong>inux <strong>U</strong>ser <strong>S</strong>tamm<strong>t</strong>isch. Die Themen sind meist frei wählbar. Es geht um aktuelle Erfahrungen, beruflich, schulisch oder aus Hobby. Wie alles begann: <a href="/linux_worms">tl;dr</a>.
    <br /> Wenn Dich Linux interessiert, komm vorbei, setz Dich dazu ! <br />
 
-<img style="float: left;padding-right: 10px;"  src="/images/Linux_presentation_day.png" alt="Icon Linux Presentation day" title="Wir sind auf dem Wormser LPD 2022.2"/ />
-<div style="clear: right">
-<strong>Linux Presentation Day an der Hochschule Worms. 18.11.2022</strong><br /> Wir waren dabei. <a title="Externer Link!" href="https://www.hs-worms.de/lpd-2022-2/">lesen</a>
+<strong>Achtung! Am 04.04.2023 treffen wir uns beim Michael Firma satwareAG</strong> Friedrich-Ebert-Straße 34 und nicht im  <s>Timescafe</s>
 </div>
    </div>
 
