--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
   <strong>WOLUST</strong> ist ein Acronym für <strong>Wo</strong>rmser <strong>L</strong>inux <strong>U</strong>ser <strong>S</strong>tamm<strong>t</strong>isch. Die Themen sind meist frei wählbar. Es geht um aktuelle Erfahrungen, beruflich, schulisch oder aus Hobby. Wie alles begann: <a href="/linux_worms">tl;dr</a>.
    <br /> Wenn Dich Linux interessiert, komm vorbei, setz Dich dazu ! <br />
 
-<strong>Achtung! Am 04.04.2023 treffen wir uns beim Michael Firma satwareAG</strong> Friedrich-Ebert-Straße 34 und nicht im  <s>Timescafe</s>
+<strong>Freitag, 26. Mai 2023, von 15:00 bis 18:00 Uhr ist der <a href=https://www.hs-worms.de/linux-2023-1/>"Linux-Presentation-Day Worms"</a> an der Hochschule Worms</strong>. Wir werden dabei sein.
 </div>
    </div>
 
