Termine besser angekündigt und den Issue Chat in Kontakt verwandelt

--- a/contact.html
+++ b/contact.html
@@ -1,23 +1,14 @@
 ---
-title: Issue (Github)
+title: Kontakt
 layout: page
 permalink: "/contact/"
 tags:
 - contact
 ---
 
-<h3>Das hier ist Gästebuch, Notizblock, Linkliste und vieles mehr.</h3>
-
-
-Schreib einfach Deine Kommentare da rein !
-<div class="py2">
-  
-<script src="https://utteranc.es/client.js"
-        repo="Wolust/wolust.github.io"
-        issue-term="pathname"
-        label="Linux"
-        theme="github-light"
-        crossorigin="anonymous"
-        async>
-</script>
-	</div>
+<h3>Kontakt mit Wolust</h3>
+ Komm einfach zu unseren Stammtischen und setz dich dazu !
+ 
+ Oder per mail
+ an: Stefan Höhn
+ <a href="mailto:wolust@untergang.de"> Wolust@untergang.de</a>
