Pda dür Bilder auf der indx seite geändert.{{ site.url }}

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
   <div class="well">
   <strong>WOLUST</strong> ist ein Acronym für <strong>Wo</strong>rmser <strong>L</strong>inux <strong>U</strong>ser <strong>S</strong>tamm<strong>t</strong>isch. Die Themen sind meist frei wählbar. Es geht um aktuelle Erfahrungen, beruflich, schulisch oder aus Hobby. Wie alles begann: <a href="/linux_worms">tl;dr</a>.
    <br /> Wenn Dich Linux interessiert, komm vorbei, setz Dich dazu ! <br />
-<img style="float: left;padding-right: 10px;"  src="./images/Linux_presentation_day.png" alt="Icon Linux Presentation day" title="Wir sind auf dem Wormser LPD 2023.1"/ />
+<img style="float: left;padding-right: 10px;"  src="{{ site.url }}/images/Linux_presentation_day.png" alt="Icon Linux Presentation day" title="Wir sind auf dem Wormser LPD 2023.1"/ />
 
 <div style="clear: right">
 Im Oktober 2023 ist ein  <a href=https://www.hs-worms.de/linux-2023-1/>"Linux-Presentation-Day Worms"</a></strong> Wir machen mit.
@@ -24,7 +24,7 @@ Im Oktober 2023 ist ein  <a href=https://www.hs-worms.de/linux-2023-1/>"Linux-Pr
 
 
   <figure id="home_tux">
-      <img src="/images/tux-wolust.jpg" alt="Tux auf einem Biertisch" title="Der Tux ist immer dabei"/>
+      <img src="{{ site.url }}/images/tux-wolust.jpg" alt="Tux auf einem Biertisch" title="Der Tux ist immer dabei"/>
       <figcaption style="text-align: center;">Tux ist auf dem Tisch</figcaption>
   </figure>
   {% if posts_count > 0 %}
