--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
   <div class="well">
   <strong>WOLUST</strong> ist ein Acronym für <strong>Wo</strong>rmser <strong>L</strong>inux <strong>U</strong>ser <strong>S</strong>tamm<strong>t</strong>isch. Die Themen sind meist frei wählbar. Es geht um aktuelle Erfahrungen, beruflich, schulisch oder aus Hobby. Wie alles begann: <a href="/linux_worms">tl;dr</a>.
    <br /> Wenn Dich Linux interessiert, komm vorbei, setz Dich dazu ! <br />
-<img style="float: left;padding-right: 10px;"  src="{{ site.url }}/images/Linux_presentation_day.png" alt="Icon Linux Presentation day" title="Wir sind auf dem Wormser LPD 2023.1"/ />
+<img style="float: left; padding: 10px;"  src="{{ site.url }}/images/Linux_presentation_day.png" alt="Icon Linux Presentation day" title="Wir sind auf dem Wormser LPD 2023.1"/ />
 
 <div style="clear: right">
 Am 24.Nov.2023 war ein <a href="https://www.hs-worms.de/lpd-2023-2/" alt="externer Link" title="Geht zur Hochschule Worms">Linux-Presentation-Day Worms</a>  Wir waren dabei.
