--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ layout: default
 
 <div style="clear: right">
 Am 24.Nov.2023 war ein <a href="https://www.hs-worms.de/lpd-2023-2/" alt="externer Link" title="Geht zur Hochschule Worms">Linux-Presentation-Day Worms</a>  Wir waren dabei.
-<br /> &nbsp;
-<br /> &nbsp;
+<br /> &nbsp; &nbsp;
+<br /> &nbsp; &nbsp;
 </div>
 
 </div>
