--- a/index.html
+++ b/index.html
@@ -53,4 +53,14 @@ Am 24.Nov.2023 war ein <a href="https://www.hs-worms.de/lpd-2023-2/" alt="extern
   {% else %}
     <h1 class='center'>{{ site.text.index.coming_soon }}</h1>
   {% endif %}
+  <p>
+  </p>
+  <div class="home">
+  <div class="well">
+
+  <img style="float: left; padding: 10px; width: 8%; height: 8%;"  src="{{ site.url }}/images/u10.png" alt="Makerspace Worms" title="Makerspace Worms wir finden das gut"/ />
+  Den Makerspace Worms <br />finden wir gut.
+  <a href="https://u10.makercloud.de/#support_us" title="externer Link">U.10</a><br />
+  am 02.03.2024 ist offener Hackspace
+  </div>
 </div>
