--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ layout: default
 <img style="float: left; padding: 10px;"  src="{{ site.url }}/images/Linux_presentation_day.png" alt="Icon Linux Presentation day" title="Wir sind auf dem Wormser LPD 2023.1"/ />
 
 <div style="clear: right">
+Am 17.Mai.2024 gibts einen Linux Presentation Day Hochschule Worms.<br />
 Am 24.Nov.2023 war ein <a href="https://www.hs-worms.de/lpd-2023-2/" alt="externer Link" title="Geht zur Hochschule Worms">Linux-Presentation-Day Worms</a>  Wir waren dabei.
-<br /> &nbsp; &nbsp;
 </div>
 
 </div>
