ob das mal klappt . einen Link einzufügen?

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@ layout: default
 
 <div style="clear: right">
 Am <b>17.Mai.2024</b> gibts einen <b><a href="https://www.hs-worms.de/lpd-2024-1/" alt="externer Link" title="Geht zur Hochschule Worms">Linux Presentation Day</a> Worms</b><br>
-Bisherige <a href="{{ site.url }}/talk/">LPDs</a> mit Wolust.<a href="https://github.com/Wolust/AI-Promotion/blob/main/Flyer_LPD_2024_1_worms.pdf">Einladung zum LPD24.1 als PDF</a>>
+Bisherige <a href="{{ site.url }}/talk/">LPDs</a> mit Wolust.
+<a href="https://github.com/Wolust/AI-Promotion/blob/main/Flyer_LPD_2024_1_worms.pdf">Einladung zum LPD24.1 als PDF</a>
 </div>
 
 </div>
