--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@ layout: default
   <div class="well">
   <strong>WOLUST</strong> ist ein Acronym für <strong>Wo</strong>rmser <strong>L</strong>inux <strong>U</strong>ser <strong>S</strong>tamm<strong>t</strong>isch. Die Themen sind meist frei wählbar. Es geht um aktuelle Erfahrungen, beruflich, schulisch oder aus Hobby. Wie alles begann: <a href="/linux_worms">tl;dr</a>.
    <br /> Wenn Dich Linux interessiert, komm vorbei, setz Dich dazu ! <br />
-<img style="float: left; padding: 10px;"  src="{{ site.url }}/images/Linux_presentation_day.png" alt="Icon Linux Presentation day" title="Wir sind auf dem Wormser LPD 2024.1"/ />
+<img style="float: left; padding: 10px;"  src="{{ site.url }}/images/Linux_presentation_day.png" alt="Icon Linux Presentation day" title="Wir waren auf dem Wormser LPD 2024.1"/ />
 
 <div style="clear: right">
-Am <b>17.Mai.2024</b> gibts einen <b><a href="https://www.hs-worms.de/lpd-2024-1/" alt="externer Link" title="Geht zur Hochschule Worms">Linux Presentation Day</a> Worms</b><br>
+Am <b>17.Mai.2024</b> war ein <b><a href="https://www.hs-worms.de/lpd-2024-1/" alt="externer Link" title="Geht zur Hochschule Worms">Linux Presentation Day</a> Worms</b><br>
 Bisherige <a href="{{ site.url }}/talk/">LPDs</a> mit Wolust.
-<a href="https://github.com/Wolust/AI-Promotion/blob/main/Flyer_LPD_2024_1_worms.pdf">Einladung zum LPD24.1 als PDF</a>
+<a href="https://github.com/Wolust/AI-Promotion/blob/main/Flyer_LPD_2024_1_worms.pdf">Demnächst gibts hier mehr Infos</a>
 </div>
 
 </div>
