lpd24.1 Zeugs egänzt

--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@ layout: default
 <img style="float: left; padding: 10px;"  src="{{ site.url }}/images/Linux_presentation_day.png" alt="Icon Linux Presentation day" title="Wir waren auf dem Wormser LPD 2024.1"/ />
 
 <div style="clear: right">
-Am <b>17.Mai.2024</b> war ein <b><a href="https://www.hs-worms.de/lpd-2024-1/" alt="externer Link" title="Geht zur Hochschule Worms">Linux Presentation Day</a> Worms</b><br>
+Am 17.Mai.2024 war ein <a href="https://www.hs-worms.de/lpd-2024-1/" alt="externer Link" title="Geht zur Hochschule Worms">Linux Presentation Day</a> Worms<br>
 Bisherige <a href="{{ site.url }}/talk/">LPDs</a> mit Wolust.
-<a href="https://github.com/Wolust/AI-Promotion/blob/main/Flyer_LPD_2024_1_worms.pdf">Demnächst gibts hier mehr Infos</a>
 </div>
 
 </div>
