LPD 25.1  Link eingebaut

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@ layout: default
   <div class="well">
   <strong>WOLUST</strong> ist ein Acronym für <strong>Wo</strong>rmser <strong>L</strong>inux <strong>U</strong>ser <strong>S</strong>tamm<strong>t</strong>isch. Die Themen sind meist frei wählbar. Es geht um aktuelle Erfahrungen, beruflich, schulisch oder aus Hobby. Wie alles begann: <a href="/linux_worms">tl;dr</a>.
    <br /> Wenn Dich Linux interessiert, komm vorbei, setz Dich dazu ! <br />
-<img style="float: left; padding: 10px;"  src="{{ site.url }}/images/Linux_presentation_day.png" alt="Icon Linux Presentation day" title="Wir waren auf dem Wormser LPD 2024.1"/ />
+<img style="float: left; padding: 10px;"  src="{{ site.url }}/images/Linux_presentation_day.png" alt="Icon Linux Presentation day" title="Wir warten auf dem Wormser LPD 2025.1"/ />
 
 <div style="clear: right">
-Am 17.Mai.2024 war ein <a href="https://www.hs-worms.de/lpd-2024-1/" alt="externer Link" title="Geht zur Hochschule Worms">Linux Presentation Day</a> Worms<br>
+Am 16.Mai.2025 gibts einen <a href="https://www.hs-worms.de/lpd-2025-1/" alt="externer Link" title="Geht zur Hochschule Worms">Linux Presentation Day</a> Worms<br>
 Bisherige <a href="{{ site.url }}/talk/">LPDs</a> mit Wolust.
 </div>
 
