--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
 <img style="float: left; padding: 10px;"  src="{{ site.url }}/images/Linux_presentation_day.png" alt="Icon Linux Presentation day" title="Wir warten auf dem Wormser LPD 2025.1"/ />
 
 <div style="clear: right">
-Am 17.Oktober.2025 gibts einen <a href="https://www.hs-worms.de/lpd-2025-2/" alt="externer Link" title="Geht zur Hochschule Worms">Linux Presentation Day</a> Worms<br>
+Am 17.Oktober.2025 gab es einen <a href="https://www.hs-worms.de/lpd-2025-2/" alt="externer Link" title="Geht zur Hochschule Worms">Linux Presentation Day</a> Worms<br>
 Bisherige <a href="{{ site.url }}/talk/">LPDs</a> mit Wolust.
 </div>
 
