--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
   <div class="well">
   <strong>WOLUST</strong> ist ein Acronym für <strong>Wo</strong>rmser <strong>L</strong>inux <strong>U</strong>ser <strong>S</strong>tamm<strong>t</strong>isch. Die Themen sind meist frei wählbar. Es geht um aktuelle Erfahrungen, beruflich, schulisch oder aus Hobby. Wie alles begann: <a href="/linux_worms">tl;dr</a>.
    <br /> Wenn Dich Linux interessiert, komm vorbei, setz Dich dazu ! <br />
-<img style="float: left; padding: 10px;"  src="{{ site.url }}/images/Linux_presentation_day.png" alt="Icon Linux Presentation day" title="Wir warten auf dem Wormser LPD 2025.1"/ />
+<img style="float: left; padding: 10px;"  src="{{ site.baseurl }}/images/Linux_presentation_day.png" alt="Icon Linux Presentation day" title="Wir warten auf dem Wormser LPD 2025.1"/ />
 
 <div style="clear: right">
 Am 17.Oktober.2025 gab es einen <a href="https://www.hs-worms.de/lpd-2025-2/" alt="externer Link" title="Geht zur Hochschule Worms">Linux Presentation Day</a> Worms<br>
@@ -22,7 +22,7 @@ Bisherige <a href="{{ site.url }}/talk/">LPDs</a> mit Wolust.
 
 
   <figure id="home_tux">
-      <img src="{{ site.url }}/images/tux-wolust.jpg" alt="Tux auf einem Biertisch" title="Der Tux ist immer dabei"/>
+      <img src="{{ site.baseurl }}/images/tux-wolust.jpg" alt="Tux auf einem Biertisch" title="Der Tux ist immer dabei"/>
       <figcaption style="text-align: center;">Tux ist auf dem Tisch</figcaption>
   </figure>
   {% if posts_count > 0 %}
